--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 # MySQL properties
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/spring_security
+spring.datasource.url=jdbc:mysql://localhost:3306/TEST
 spring.datasource.username=root
 spring.datasource.password=89273568217
 
@@ -13,3 +13,8 @@ spring.mvc.hiddenmethod.filter.enabled=true
 # Error log
 logging.level.org.springframework=debug
 logging.level.org.hibernate=debug
+logging:
+level:
+org.springframework.security: DEBUG
+
+spring.jpa.open-in-view = false
